Avances style.css 3.

--- a/style.css
+++ b/style.css
@@ -127,5 +127,21 @@ a:hover {
 }
 
 .hamburguer-icon.opne span:first-child {
+    transform: rotate(45deg) translate(10px, 5px);
+}
+
+.hamburguer-icon.open span:nth-child(2) {
+    opacity: 0;
+}
+
+hamburguer-icon.open span:last-child {
+    transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburguer-icon span:first-child {
+    transform: none;
+}
+
+.hambuerguer-icon span:first-child {
     
 }
