--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,4 +1,4 @@
-@media screen and (max width: 1400px) {
+@media screen and (max-width: 1400px) {
     #profile {
         height: 83vh;
         margin-bottom: 6rem;
@@ -14,7 +14,7 @@
 
 @media screen and (max-width: 1200px) {
     #desktop-nav {
-        display: flex;
+        display: none;
     }
     #hamburguer-nav {
         display: flex;
@@ -75,7 +75,7 @@
     .nav-links li a {
         font-size: 1rem;
     }
-    .experience-sub.title {
+    .experience-sub-title {
         font-size: 1.25rem;
     }
     .logo {
